--- a/LittleLemon/app/build.gradle
+++ b/LittleLemon/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
